# value_chain_map

./: .gitignore  RUNNING.md  value_chain_research_tool_prd.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/tests/: conftest.py  test_config.py  test_contracts.py  test_db_metadata.py  test_evidence.py  test_graph_api.py  test_graph_query.py  test_graph_store.py  test_health.py  test_ingestion.py  test_ingestion_live.py  test_llm.py  test_llm_smoke.py  test_parsing.py  test_pipeline.py  test_pipeline_api.py  test_pipeline_live.py  test_repository.py  test_resolution.py  test_review.py  test_review_api.py  test_seed.py
backend/vcm/: __init__.py  config.py  main.py  pipeline.py  seed.py
backend/vcm/analytics/: __init__.py
backend/vcm/api/: __init__.py  evidence.py  graph.py  health.py  pipeline.py  review.py
backend/vcm/db/: __init__.py  base.py  models.py  repository.py  session.py
backend/vcm/eval/: __init__.py
backend/vcm/evidence/: __init__.py
backend/vcm/extraction/: __init__.py
backend/vcm/financials/: __init__.py
backend/vcm/graph/: __init__.py  queries.py  store.py
backend/vcm/ingestion/: __init__.py  edgar.py  service.py  store.py
backend/vcm/llm/: __init__.py  base.py  calls.py  client.py  errors.py  prompts.py  registry.py
backend/vcm/models/: __init__.py  contracts.py  enums.py
backend/vcm/parsing/: __init__.py  chunk.py  parse.py
backend/vcm/resolution/: __init__.py
backend/vcm/review/: __init__.py
(+37 files in other folders)
